# java-gamma-lib

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/gammaapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/llc/berserkr/gammaapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lib/: .gitignore  build.gradle.kts
lib/src/androidTest/java/llc/berserkr/gammalib/: GammaTest.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  gamma-lib.cpp
lib/src/main/java/llc/berserkr/gammalib/android/: AudioBufferLoader.java  BufferLoader.java  SoundEncodingUtil.java  SoundRecorder.java
lib/src/main/java/llc/berserkr/gammalib/jni/: Gamma.java
lib/src/main/java/llc/berserkr/gammalib/util/: MP3ToPCMConverter.java  SoundEncodingUtil.java  StreamUtil.java
lib/src/test/java/llc/berserkr/gammalib/: GammaUnitTest.java
